--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
               </div>
             </div>
           </nav>
-          <!-- Top Banner -->
-          <section class="container">
+          <!------------------------------------------------------- Top Banner ------------------------------------------>
+          <section class="container my-5">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -53,7 +53,7 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                      <div class="row p-5 bg-primary bg-gradient d-flex align-items-center">
+                      <div class="p-3 border rounded-3 bg-primary bg-gradient d-flex align-items-center">
                         <div class="col-lg-7">
                             <h1>Cool Dude Headphone</h1>
                             <p>This is best headphone in the world for the people who just want to wast time in front of funky world</p>
@@ -67,7 +67,7 @@
                                               
                       </div>
                       <div class="carousel-item">
-                        <div class="row p-5 bg-primary bg-gradient d-flex align-items-center">
+                        <div class="p-3 border rounded-3 bg-primary bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports</h1>
                             <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
@@ -80,7 +80,7 @@
                           </div>
                           </div>
                           <div class="carousel-item">
-                            <div class="row p-5 bg-primary bg-gradient d-flex align-items-center">
+                            <div class="p-3 border rounded-3 bg-primary bg-gradient d-flex align-items-center">
                                 <div class="col-lg-7">
                                     <h1>X-Box for your living room</h1>
                                     <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
@@ -107,7 +107,130 @@
           </section>
     </header>
     <main>
-
+<!--------------------------------------------------- catagories -------------------------------------------------------------->
+<section class="container my-5">
+        <div class="row g-4">
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+                <h1 class="text-white">Watch</h1>
+                <img src="images/categories/watch.png" alt="">
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded-3">
+                <h1 class="text-white">Shoes</h1>
+                <img src="images/categories/shoes.png" alt="">
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="p-3 border bg-info d-flex align-items-center justify-content-between rounded-3">
+                <h1 class="text-white">Bag</h1>
+                <img src="images/categories/bag.png" alt="">
+            </div>
+          </div>
+          </div>
+</section>
+<!------------------------------------------- Shoes section --------------------------------------->
+<section class="container">
+    <h2>Shoes</h2>
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col">
+          <div class="card border-0 shadow-lg h-100">
+            <img src="Images/shoes/shoe-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Supply 350</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h2>$350</h2>
+            </div>
+            <div class="m-3">
+            <div class="btn btn btn-warning">Buy Now</div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border-0 shadow-lg h-100">
+            <img src="Images/shoes/shoe-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nike 360</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h2>$350</h2>
+            </div>
+            <div class="m-3">
+            <div class="btn btn btn-warning">Buy Now</div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border-0 shadow-lg h-100">
+            <img src="Images/shoes/shoe-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Airmax</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <h2>$350</h2>
+            </div>
+            <div class="m-3">
+            <div class="btn btn btn-warning">Buy Now</div>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+</section>
+<!------------------------ bag section --------------------------------------------->
+<section class="container my-4">
+    <h2>Backpack</h2>
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col">
+          <div class="card border-0 shadow-lg h-100">
+            <img src="Images/bags/bag-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Nulto Bag</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h2>$350</h2>
+            </div>
+            <div class="m-3">
+            <div class="btn btn btn-warning">Buy Now</div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border-0 shadow-lg h-100">
+            <img src="Images/bags/bag-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Blue Niltu Bag</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h2>$350</h2>
+            </div>
+            <div class="m-3">
+            <div class="btn btn btn-warning">Buy Now</div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border-0 shadow-lg h-100">
+            <img src="Images/bags/bag-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Black Kaltu Bag</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <h2>$350</h2>
+            </div>
+            <div class="m-3">
+            <div class="btn btn btn-warning">Buy Now</div>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+</section>
+<!------------------------ subscribe Section -------------------------->
+<section style="height: 400px;" class="container bg-info d-flex justify-content-center align-items-center rounded-3">
+   <div>
+    <h1>LET'S STAY IN TOUCH</h1>
+    <P>Get update on sales, specials and more</P>
+    <input type="text" placeholder="Your Email"><br>
+    <button class="btn btn-warning">Submit</button>
+   </div>
+</section>
     </main>
     <footer>
 
