--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- header start -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
                 
               <a class="navbar-brand" href="#">
@@ -27,13 +27,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#Shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#Backpack">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#Subscribe">Subscribe</a>
                   </li>
                 </ul>
                 <form class="d-flex">
@@ -53,7 +53,7 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                      <div class="p-3 border rounded-3 bg-primary bg-gradient d-flex align-items-center">
+                      <div class="p-5 rounded-3 bg-primary bg-gradient d-flex align-items-center">
                         <div class="col-lg-7">
                             <h1>Cool Dude Headphone</h1>
                             <p>This is best headphone in the world for the people who just want to wast time in front of funky world</p>
@@ -67,7 +67,7 @@
                                               
                       </div>
                       <div class="carousel-item">
-                        <div class="p-3 border rounded-3 bg-primary bg-gradient d-flex align-items-center">
+                        <div class="p-5 rounded-3 bg-primary bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports</h1>
                             <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
@@ -80,7 +80,7 @@
                           </div>
                           </div>
                           <div class="carousel-item">
-                            <div class="p-3 border rounded-3 bg-primary bg-gradient d-flex align-items-center">
+                            <div class="p-5 rounded-3 bg-primary bg-gradient d-flex align-items-center">
                                 <div class="col-lg-7">
                                     <h1>X-Box for your living room</h1>
                                     <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
@@ -131,7 +131,7 @@
           </div>
 </section>
 <!------------------------------------------- Shoes section --------------------------------------->
-<section class="container">
+<section class="container" id="Shoes">
     <h2>Shoes</h2>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
@@ -177,7 +177,7 @@
       </div>
 </section>
 <!------------------------ bag section --------------------------------------------->
-<section class="container my-4">
+<section class="container my-4" id="Backpack">
     <h2>Backpack</h2>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
@@ -223,7 +223,7 @@
       </div>
 </section>
 <!------------------------ subscribe Section -------------------------->
-<section style="height: 400px;" class="container bg-info d-flex justify-content-center align-items-center rounded-3">
+<section style="height: 400px;" class="container bg-info d-flex justify-content-center align-items-center rounded-3" id="Subscribe">
    <div>
     <h1>LET'S STAY IN TOUCH</h1>
     <P>Get update on sales, specials and more</P>
@@ -232,8 +232,8 @@
    </div>
 </section>
     </main>
-    <footer>
-
+    <footer class="mt-5 text-center">
+        <small>©2020. Panda Commerce. All rights reserved.</small>
     </footer>
 <!-- bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
