--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <!-- header start -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <div class="container">
-                
+            <div class="container">              
               <a class="navbar-brand" href="#">
                 <img src="Images/logo.png" alt="">
               </a>
@@ -44,7 +43,7 @@
             </div>
           </nav>
           <!------------------------------------------------------- Top Banner ------------------------------------------>
-          <section class="container my-5">
+          <section class="container mt-5">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -53,12 +52,12 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                      <div class="p-5 rounded-3 bg-primary bg-gradient d-flex align-items-center">
+                      <div class="p-5 rounded-3 panda-bg-primary bg-gradient d-flex align-items-center">
                         <div class="col-lg-7">
                             <h1>Cool Dude Headphone</h1>
                             <p>This is best headphone in the world for the people who just want to wast time in front of funky world</p>
                             <h2>$420</h2>
-                            <button class="btn btn-warning">Buy Now</button> 
+                            <button class="panda-btn-buy-now">Buy Now >></button> 
                         </div>
                         <div class="col-lg-5">
                             <img src="Images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -67,12 +66,12 @@
                                               
                       </div>
                       <div class="carousel-item">
-                        <div class="p-5 rounded-3 bg-primary bg-gradient d-flex align-items-center">
+                        <div class="p-5 rounded-3 panda-bg-primary bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports</h1>
                             <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
                             <h2>$1200</h2>
-                                <button class="btn btn-warning">Buy Now</button> 
+                                <button class="panda-btn-buy-now">Buy Now >></button> 
                             </div>
                             <div class="col-lg-5">
                                 <img src="Images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -80,12 +79,12 @@
                           </div>
                           </div>
                           <div class="carousel-item">
-                            <div class="p-5 rounded-3 bg-primary bg-gradient d-flex align-items-center">
+                            <div class="p-5 rounded-3 panda-bg-primary bg-gradient d-flex align-items-center">
                                 <div class="col-lg-7">
                                     <h1>X-Box for your living room</h1>
                                     <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
                                     <h2>$600</h2>
-                                    <button class="btn btn-warning">Buy Now</button> 
+                                    <button class="panda-btn-buy-now">Buy Now >></button> 
                                 </div>
                                 <div class="col-lg-5">
                                     <img src="Images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -108,7 +107,7 @@
     </header>
     <main>
 <!--------------------------------------------------- catagories -------------------------------------------------------------->
-<section class="container my-5">
+<section class="container my-5 pancatagories">
         <div class="row g-4">
           <div class="col-lg-4 col-md-6 col-12">
             <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
@@ -143,7 +142,7 @@
               <h2>$350</h2>
             </div>
             <div class="m-3">
-            <div class="btn btn btn-warning">Buy Now</div>
+            <div class="panda-btn-buy-now">Buy Now >></div>
             </div>
           </div>
         </div>
@@ -152,11 +151,11 @@
             <img src="Images/shoes/shoe-2.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Nike 360</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              <h2>$350</h2>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h3>$350</h3>
             </div>
             <div class="m-3">
-            <div class="btn btn btn-warning">Buy Now</div>
+            <div class="panda-btn-buy-now">Buy Now >></div>
             </div>
           </div>
         </div>
@@ -165,11 +164,11 @@
             <img src="Images/shoes/shoe-3.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Red Airmax</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <h2>$350</h2>
             </div>
             <div class="m-3">
-            <div class="btn btn btn-warning">Buy Now</div>
+            <div class="panda-btn-buy-now">Buy Now >></div>
             </div>
             </div>
           </div>
@@ -189,7 +188,7 @@
               <h2>$350</h2>
             </div>
             <div class="m-3">
-            <div class="btn btn btn-warning">Buy Now</div>
+            <div class="panda-btn-buy-now">Buy Now >></div>
             </div>
           </div>
         </div>
@@ -202,7 +201,7 @@
               <h2>$350</h2>
             </div>
             <div class="m-3">
-            <div class="btn btn btn-warning">Buy Now</div>
+            <div class="panda-btn-buy-now">Buy Now >></div>
             </div>
           </div>
         </div>
@@ -215,7 +214,7 @@
               <h2>$350</h2>
             </div>
             <div class="m-3">
-            <div class="btn btn btn-warning">Buy Now</div>
+            <div class="panda-btn-buy-now">Buy Now >></div>
             </div>
             </div>
           </div>
@@ -227,8 +226,8 @@
    <div>
     <h1>LET'S STAY IN TOUCH</h1>
     <P>Get update on sales, specials and more</P>
-    <input type="text" placeholder="Your Email"><br>
-    <button class="btn btn-warning">Submit</button>
+    <input class="form-control" type="text" placeholder="Your Email"><br>
+    <button class="panda-btn-buy-now">Submit</button>
    </div>
 </section>
     </main>
